test/Harper/Tests/Good/issue028_tuples2.har
main :: sideeffect -> ();
main = {
  var (x :: (Integer, (Integer, Bool))) = (0, (42, true));
  eval printLn x ();

  (0, (tup :: (Integer, Bool))) = x;
  eval printLn tup ();

  x := (42, (0, false));
  eval printLn x ();
  eval printLn tup ();
};