test/Harper/Tests/Bad/LambdaCapturingVariableBecomesImpure.har
main :: sideeffect -> ();
main = {
  var (x :: Integer) = 42;
  (f :: Integer -> Integer) = (\(y :: Integer) => x + y);
  eval printLn (f 10) ();
  x := 0;
  eval printLn (f 10) ();
};